--- a/misc/notes/TODO
+++ b/misc/notes/TODO
@@ -33,3 +33,8 @@ keybinds
     animator
     uv
   switch between views
+
+"web1.0 theme"
+  everything is in tables with the weird clear border
+  links are blue underline
+  times new roman
